tests/basic/bad/test05.pepa
% File: tests/bad/test05.pepa
% Cyclic component definition (of P)
P = P;
(P <> P)

